# HopTF

./: .gitignore  .gitmodules  README.md  pyproject.toml
envs/scarf/: pyproject.toml
envs/scarf/tests/: test_add_scarf_embeddings.py  test_scarf_checkpoint_smoke.py
mvp/: add_hvg_pca.py  add_response_score.py  make_borzoi_tokens.py  make_esmc_embeddings.py  run_linear_probe.py  show_borzoi_tokens.py  show_esmc_embeddings.py
notebooks/: alphagenome_scarf.ipynb  scarf_scp3357_colab.ipynb
paper/: HopTF_full_draft.aux  HopTF_full_draft.bbl  HopTF_full_draft.blg  HopTF_full_draft.fdb_latexmk  HopTF_full_draft.fls  HopTF_full_draft.out  HopTF_full_draft.tex  main.tex  references.bib
planning/: 2026-05-02_hopfield_fitting.md  2026-05-04_hoptf_handoff.md  2026-05-09_partner_delegation_letter.md  2026-05-11_hoptf_guardrails_evidence.md  2026-05-11_natural_isoform_failure_audit.md  2026-05-16_experiment_plan.md  2026-05-16_experimental_plan_followup.md  2026-05-16_larger_variant_panel_experiment.md  2026-05-17_benign_guide.md  2026-05-17_experiment_plan.md  2026-05-17_hoptf2_benign_variant_mil_proposal.md  2026-05-17_hoptf2_mil_first_attempt.md  2026-05-17_ortholog_supported_benign_controls.md  2026-05-18_MIL_experiment.md
reports/: hoptf_may18_report_outline.md
scarf/: README.md  __init__.py  contrastive_model.py  embeddings.py  mamba_modified.py  modeling_bert_modified.py
scripts/: add_scarf_embeddings.py  bootstrap_scarf.sh  bootstrap_scarf_colab.sh  build_ortholog_supported_benign_controls.py  build_perturbation_latents.py  build_scp3357_h5ad.py  generate_esmc.py  (+25 more)
(+15 files in other folders)
