[project]
name = "hoptf"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anndata<0.12",
    "ipykernel",
    "pyfaidx",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "pytest",
    "zarr<3",
    "huggingface-hub>=1.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
