[project]
name = "hoptf-scarf"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anndata>=0.9,<0.12",
    "huggingface-hub>=0.25,<1.0",
    "ipykernel",
    "mamba-ssm @ https://github.com/state-spaces/mamba/releases/download/v2.3.1/mamba_ssm-2.3.1+cu12torch2.10cxx11abiTRUE-cp312-cp312-linux_x86_64.whl",
    "numpy<2",
    "pandas",
    "pytest",
    "scipy",
    "torch==2.10.0",
    "tqdm",
    "transformers==4.46.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
